Uso de transformaciones y rotaciones en Html5 y Css3

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 /*			transition-property: width;*/
 			transition-duration: 1s;
 /*			transition-delay: 1s;*/
-			transition-timing-function: ease;
-/*			transition: width 1s ease;*/
+			/*transition-timing-function: ease;*/
+			transition: width 1s ease;
 		}
 
 		.pelota.p:hover {
-			width: 200px;
-			height: 200px;
+			width: 300px;
+			height: 300px;
 		}
 	</style>
 </head>
