--- a/transformations.html
+++ b/transformations.html
@@ -18,11 +18,11 @@
 				border-radius: 50%;
 /*				background-color: red;*/
 				transition-property: width;
-				/*transition-duration: 1s;*/
+				transition-duration: 1s;
 				/*transition-delay: 1s;*/
 				transition-timing-function: ease;
 				transition: width 1s ease;
-				/*transition: 2s;*/
+				transition: 2s;
 				position: absolute;
 				display: flex;
 				align-items: center;
@@ -45,6 +45,8 @@
 				position: relative;
 				height: 100px;
 				width: 100%;
+				/*transform: rotar | sesgar | posicion | tamaño*/
+				transform: rotate(5deg) skew(15deg) translate(-50px) scale(.7);
 			}
 
 			.canasta:hover .pelota.a {
